--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
         <!-- LOADING SCREEN -->
-<div id="loader">
+<!--<div id="loader">
   <div class="spinner"></div>
   <p>Loading Agro-link...</p>
-</div>
+</div>-->
 
 
     <!----section 1----->
@@ -417,4 +417,5 @@ window.addEventListener('load', () => {
 
 
 </body>
+
 </html>
